use domain name instead of ip

--- a/roles/ovirt_imageio/templates/data.js.j2
+++ b/roles/ovirt_imageio/templates/data.js.j2
@@ -2,8 +2,8 @@ config_data = {
 	tvault : 
 	{
 		protocol: "{{ tvault_endpoint_protocol }}",
-        	ip: "{{ virtual_ip }}",
-    		port: "8780",
+        	ip: "{{ virtual_ip_fqdn }}",
+    			port: "8780",
 		project_id: "admin"
 	}
 }
