--- a/roles/ovirt_new/templates/data.js.j2
+++ b/roles/ovirt_new/templates/data.js.j2
@@ -1,10 +1,10 @@
 config_data = {
 	tvault : 
 	{
-		protocol: "{{ tvault_endpoint_protocol }}",
+		protocol: "https",
         websocket_protocol:"wss",
 		ip: "{{ virtual_ip_fqdn }}",
-    	port: "8780",
+    	port: "",
 		websocket_port:"8888",
 		project_id: "admin"
 	}
