port changes -rhv 4.3 support

--- a/roles/ovirt_imageio/templates/data.js.j2
+++ b/roles/ovirt_imageio/templates/data.js.j2
@@ -4,7 +4,7 @@ config_data = {
 		protocol: "{{ tvault_endpoint_protocol }}",
         websocket_protocol:"wss",
 		ip: "{{ virtual_ip_fqdn }}",
-    	port: "8780",
+    	port: "",
 		websocket_port:"8888",
 		project_id: "admin"
 	}
