fix https protocol

--- a/roles/ovirt_imageio/templates/data.js.j2
+++ b/roles/ovirt_imageio/templates/data.js.j2
@@ -1,7 +1,7 @@
 config_data = {
 	tvault : 
 	{
-		protocol: "{{ tvault_endpoint_protocol }}",
+		protocol: "https",
         websocket_protocol:"wss",
 		ip: "{{ virtual_ip_fqdn }}",
     	port: "",
